@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<addon id="resource.uisounds.amber" version="1.0.0" name="Amber UI Sounds" provider-name="Jester">
+<?xml version="2.0" encoding="UTF-8"?>
+<addon id="kodi.sounds.zoyinc" version="2.0.0" name="Zoyinc Sounds" provider-name="Zoyinc">
   <requires>
-    <import addon="kodi.resource" version="1.0.0"/>
+    <import addon="kodi.resource" version="2.0.0"/>
   </requires>
   <extension point="kodi.resource.uisounds"/>
   <extension point="kodi.addon.metadata">
-    <summary lang="en">Amber UI sounds</summary>
-    <description lang="en">Amber UI sounds</description>
+    <summary lang="en">Zoyinc Kodi sounds</summary>
+    <description lang="en">Zoyinc Kodi sounds</description>
     <platform>all</platform>
   </extension>
 </addon>
